--- a/style.css
+++ b/style.css
@@ -2,3 +2,34 @@ header {
     background-color: #424E61;
     color: white;
 }
+.cabecalho-imagem{
+    width: 20%;
+}
+.escola-imagem{
+    width: 25%;
+}
+.escola{
+    background-image: linear-gradient(#424E61,#16CFF8);
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+.escola-div-conteudo{
+    width: 35%;
+}
+.escola-titulo{
+    padding: 24px 0;
+}
+.estudante-imagem{
+    width: 120px;
+}
+.estudante-icone{
+    width: 24px;
+    padding: 4px 8px;
+}
+.estudante-div{
+    text-align: center;
+    padding: 16px 0;
+}
